Upgrade JQuery to latest current version

--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -7,7 +7,9 @@
     %link{href: '/favicon_old.png', rel: "alternate icon", type: "image/png"}
     %meta{"http-equiv": "Content-Type", content: "text/html; charset=utf-8"}
     <link rel='stylesheet' href='/assets/stylesheets/docs_new.css' type='text/css' />
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    -# <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" defer integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+    -# <script src="https://code.jquery.com/jquery-migrate-3.3.2.min.js" integrity="sha256-Ap4KLoCf1rXb52q+i3p0k2vjBsmownyBTE1EqlRiMwA=" crossorigin="anonymous"></script>
     <script src="/assets/javascripts/code.js" defer></script>
     <script src="https://www.cloudmailin.com/assets/marketing.js" defer></script>
     %meta{name: "viewport", content: "width=device-width, initial-scale=1, maximum-scale=5"}
