Update attachment docs and add full message store

--- a/layouts/sidebar.haml
+++ b/layouts/sidebar.haml
@@ -26,7 +26,8 @@
       %ul
         %li= link_to 'HTTP Status Codes', '/receiving_email/http_status_codes/'
         %li= link_to 'Using your own Domain', '/receiving_email/forwarding_and_custom_domains/'
-        %li= link_to 'Attachment Stores (S3)', '/receiving_email/attachments/'
+        %li= link_to 'Store Attachments in Cloud Storage', '/receiving_email/store-email-attachments-in-s3-azure-google-storage/'
+        %li= link_to 'Store Full Email in Cloud Storage', '/receiving_email/store-full-email-in-aws-cloud-storage/'
         %li= link_to 'Reply Parsing', '/features/extracting_replies_from_email/'
         %li
           = link_to 'Callbacks', '/features/callbacks/'
