--- a/content/assets/stylesheets/docs_new.scss
+++ b/content/assets/stylesheets/docs_new.scss
@@ -45,7 +45,12 @@ h1 {
   margin-bottom: 0.5em;
 }
 
+h2 {
+  font-size: 2.5rem;
+}
+
 h3, h4 {
+  font-size: 2rem;
   color: #666;
 }
 
@@ -153,7 +158,7 @@ nav {
   img {
     max-width: 80%;
     border: 1px solid $pre-border-color;
-    margin: 0px;
+    margin: 20px 0px;
     padding: 10px;
   }
 }
