Add receiving email in python examples
This adds flask and django examples for receiving email in python that
have been tested locally.

It also adds different h3 and h4 headers.

--- a/content/assets/stylesheets/docs_new.scss
+++ b/content/assets/stylesheets/docs_new.scss
@@ -60,7 +60,12 @@ h2 {
   font-size: 2.5rem;
 }
 
-h3, h4 {
+h3 {
+  font-size: 2.25rem;
+  color: #333;
+}
+
+h4 {
   font-size: 2rem;
   color: #666;
 }
