--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -10,7 +10,7 @@
     <link rel='stylesheet' href='/assets/stylesheets/docs_new.css' type='text/css' />
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" defer integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="/assets/javascripts/code.js" defer></script>
-    <script src="https://www.cloudmailin.com/assets/marketing.js" defer></script>
+    <script src="https://www.cloudmailin.com/assets/signup.js" defer></script>
 
     -# Algolia - css is above and then overridden
     <script src="https://cdn.jsdelivr.net/npm/@algolia/autocomplete-js"></script>
