--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -8,7 +8,7 @@
     %meta{"http-equiv": "Content-Type", content: "text/html; charset=utf-8"}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@algolia/autocomplete-theme-classic"/>
     <link rel='stylesheet' href='/assets/stylesheets/docs_new.css' type='text/css' />
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" defer integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+    -# <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" defer integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="/assets/javascripts/code.js" defer></script>
     <script src="https://www.cloudmailin.com/assets/signup.js" defer></script>
 
