Rename DMARC docs to dmarc-verification with redirect
Renamed /features/dmarc.md to /features/dmarc-verification.md to clarify this
is about inbound email verification. Added redirect at old URL and updated all
internal links and navigation.

--- a/layouts/sidebar.haml
+++ b/layouts/sidebar.haml
@@ -36,7 +36,7 @@
             %li= link_to 'Error Callbacks', '/features/callbacks/#error-callbacks'
         %li= link_to 'SPF (Sender Policy Framework)', '/features/spf/'
         %li= link_to 'DKIM Verification', '/features/dkim/'
-        %li= link_to 'DMARC Verification', '/features/dmarc/'
+        %li= link_to 'DMARC Verification', '/features/dmarc-verification/'
         %li= link_to 'Delivery Status API', '/features/delivery_status_api/'
         %li= link_to 'Securing HTTP Posts', '/receiving_email/securing_your_email_url_target/'
         %li= link_to 'IMAP Polling (Legacy Systems)', '/features/imap_collectors/'
