--- a/layouts/sidebar.haml
+++ b/layouts/sidebar.haml
@@ -61,6 +61,7 @@
         %li= link_to 'Introduction', '/outbound/'
         %li= link_to 'Getting Started', '/outbound/getting_started/'
         %li= link_to 'DKIM Signing', '/outbound/dkim/'
+        %li= link_to 'DMARC Setup', '/outbound/dmarc/'
         %li= link_to 'Priorities and Tagging', '/outbound/priorities_and_tags/'
         %li= link_to 'Email Layouts', '/outbound/email-layouts/'
         %li= link_to 'Sending Email via API', '/outbound/sending_email_via_json_api/'
